kernel/fs: Increment pos in readv/writev so long as it's not -1.

This amends 20ac27def64f92a5003e04e2d40d4f9647fc183c.

I missed an important case in that commit: if pos is not -1,
then movePosition will still be false, but we nonetheless
need to increment the read/write position.

Should fix #18921.